# LocalMCP

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  implementation_guide.md  knowledge_integration.html  modular_integration.html  project_proposal.html  project_proposal_accessible.html  project_structure.txt  pyproject.toml  requirements.txt  serve_locally.sh
.agent-os/product/: decisions.md  mission.md  roadmap.md  tech-stack.md
docs/: alignment_analysis.md
src/core/: circuit_breaker.py  orchestrator.py
